[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantlib_lite"
version = "0.2.0"
description = "Lightweight quantitative pricing framework with stochastic models, payoffs, and risk measures"
authors = [
    { name = "Maximilian Nitsch" }
]
dependencies = [
    "numpy", "scipy"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
